--- a/2015-16/index.html
+++ b/2015-16/index.html
@@ -3,9 +3,9 @@
   <!--#include virtual="commonhead.html" -->
 <head>
   <meta charset="utf-8">
-  <meta name="Description" content="SamurAI Coding 2016-17">
+  <meta name="Description" content="SamurAI Coding 2015-16">
   <meta name="author" content="Hironori Washizaki">
-  <title>SamurAI Coding 2016-17</title>
+  <title>SamurAI Coding 2015-16</title>
   <link rel="stylesheet" href="stylesheets/default.css">
 </head>
 
@@ -15,7 +15,6 @@
 <center>
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
   <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a><br>
-<!--
 <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
 <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a>
@@ -36,19 +35,19 @@
 <a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="70"/></a>
 <img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="60"/></a>
 <a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a>
--->
+
 </center>
   <nav id="global">
       <ul>
         <li><a href=".">Home</a></li>
-        <li>Schedule</li>
+        <li><a href="schedule.html">Schedule</a></li>
         <li><a href="rules.html">Rules</a></li>
-        <li>Software</li>
-        <li>Tutorial</li>
-        <li>Entry</li>
-        <li>Preliminary</li>
-        <li>Final</li>
-        <li>FAQ</li>
+        <li><a href="software.html">Software</a></li>
+        <li><a href="tutorial.html">Tutorial</a></li>
+        <li><a href="http://arena.ai-comp.net/">Entry</a></li>
+        <li><a href="preliminary.html">Preliminary</a></li>
+        <li><a href="final.html">Final</a></li>
+        <li><a href="faq.html">FAQ</a></li>
         <li><a href="index-jp.html">Japanese</a></li>
       </ul>
   </nav>
@@ -57,19 +56,16 @@
 
     <section id="main">
       <header>
-    	<h2>5th IPSJ International AI Programming Contest: SamurAI Coding 2016-17</h2>
+    	<h2>IPSJ International AI Programming Contest: SamurAI Coding 2015-16</h2>
       </header>
-      <p>As the Internet industry, IoT and Artifitial Intelligence technologies rapidly grow, there is an intensifying need for high quality engineers and programmers.
-	Information Processing Society of Japan (IPSJ) conducted the International AI programming Contest "SamurAI Coding" in 2012, 2013, 2014, and 2015, 
+      <p>As the Internet industry rapidly grows, there is an intensifying need for high quality engineers and programmers.
+	Information Processing Society of Japan (IPSJ) conducted the International AI programming Contest "SamurAI Coding" in 2012, 2013 and 2014,
 aiming to cultivate the younger generation so they can become leading researchers,
 	developers and successful on global level
-	(<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/2012photos.html">1st SamurAI Coding Final Photos in 2012</a>, <a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2nd Final Results in 2013</a>, 
-<a href="http://www.ipsj.or.jp/event/samuraicoding/2014-15/">Results in 2014-15</a>, 
-and 
-<a href="http://www.ipsj.or.jp/event/samuraicoding/2015-16/">Results in 2015-16</a>).
-      <p>5th SamurAI Coding will be held between October 2016 and March 2017.
+	(<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/2012photos.html">1st SamurAI Coding Final Photos in 2012</a>, <a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2nd Final Results in 2013</a> and <a href="http://www.ipsj.or.jp/event/samuraicoding/2014-15/">Results in 2014-15</a>).
+      <p>4th SamurAI Coding will be held between October 2015 and March 2016.
 	Contestants will compete their engineering skills for AI game programming.
-	Winners of the preliminary round will move on to the final round, which will be held on 17th March 2017 collocated with <a href="http://www.ipsj.or.jp/event/taikai/79/">79th IPSJ National Convention</a> at <a href="http://en.nagoya-u.ac.jp/access/index.html">Nagoya University, Higashiyama Campus</a>.
+	Winners of the preliminary round will move on to the final round, which will be held on March 11 2016 collocated with 78th IPSJ National Convention at <a href="http://www.keio.ac.jp/en/maps/yagami.html">Keio University, Yagami Campus</a>.
 	Participating engineers and programmers will be able to demonstrate their skills on a global level through this contest.</p>
     </section>
     
@@ -84,43 +80,70 @@ and
 
     <section id="sponsors">
     <h2>Sponsors and Supporters</h2>
-<!--
 <p>
 <table cellpadding="10">
 <tr align="center">
-<td>　</td>
-<td>　</td>
-<td>　</td>
-<td> </td>
+<td>e-Seikatsu Co., Ltd.　</td>
+<td>Hitachi, Ltd.　</td>
+<td>RecoChoku Co.,Ltd.　</td>
+<td>TIS Inc.</td>
 <td> </td>
 </tr>
 <tr>
-<td><center></center></td>
-<td><center></center></td>
-<td><center></center></td>
-<td><center></center></td>
+<td><center><a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></center></td>
+<td><center><a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a></center></td>
+<td><center><a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a></center></td>
+<td><center><a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a></center></td>
 </tr>
 <tr align="center">
-<td>　</td>
-<td>　</td>
-<td>　</td>
-<td>　</td>
-<td>　</td>
+<td>Vocal School, Venus　</td>
+<td>Fujitsu Limited　</td>
+<td>Cray Japan Inc.　</td>
+<td>GSTYLUS　</td>
+<td><a href="https://moneyforward.com/">Money Forward, Inc.</a>　</td>
 </tr>
-<td><center></center></td>
-<td><center></center></td>
-<td><center></center></td>
-<td><center></center></td>
+<td><center><a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a></center></td>
+<td><center><a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="80"/></a></center></td>
+<td><center><a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a></center></td>
+<td><center><a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></center></td>
 </tr>
 </table>
 </p>
--->
     </section>
     <section id="news">
       <h2>News</h2>
       <ul>
-<li>Sep 3: Rules and Program Interface are now available on the <a href="rules.html">Rules page</a>.
-          <li>Sep 2: This preliminary website has been launched.
+<li>Jun 4: AI programs of the finalists have been published <a href="final.html"> on the final round page</a>.
+<li>Mar 16: More photos available on <a href="final.html"> the final round page</a>.
+<li>Mar 12: The world final round was successfully over! See the result at <a href="final.html"> the final round page</a>. See you next time!</li>
+<li>Feb 29: <a href="preliminary.html">The result of 2nd call for challenge of online preliminary round</a> is out! Congratulations to all winners! For other teams that lost the 1st and 2nd online preliminary rounds, come to Yokohama and watch the World final together! Moreover later we will let you know about the banquet invitation soon. 
+	<li>Feb 15: Rules of the final round is now available in <a href="final.html"> the final round page</a>.</li>
+<li>Feb 13: <a href="preliminary.html">Detail of the 1st preliminary round result</a> is out!. 
+<li>Feb 12: <a href="preliminary.html">The result of 1st call for challenge of online preliminary round</a> is out! Congratulations to all winners! For other teams that lost the 1st online preliminary round, 
+this year there will be another chance to advance to the World Final so that 
+consider to submit your AI program to 2nd online preliminary round!
+<li>Feb 9: 1st call for challenge of online preliminary round has been over. The result will be announced on Feb 12. (TBD)</li>
+<li>Feb 8 AoE: <a href="faq.html">FAQ page</a> has been updated about "timeout" issue. 
+<li>Jan 26 AoE: The contest system is now accepting your AI program submissions! If you have any further problem, let us know it at samurai2015-contact@ipsj.or.jp
+<li>Jan 14 AoE: Due to the necessity of the system maintenance, due of 1st call for challenge of online preliminary round has been extended to Feb 8, 2016 AoE! As of Jan 14 AoE, the system is still under maintenance.</li>
+<li>Jan 12 AoE: 
+Due to frequent problems with the contest server, some of possible participants find difficulties in their development of AI players. In consideration of this state, we will extend the deadline of submission for the first preliminary round for at least three weeks.  Exact dates, including the schedule of the second preliminary round, are to be announced soon. 
+	<li>Jan 6: <a href="software.html">Game manager software</a>
+	  revised.</li>
+	<li>Jan 6: Python sample player updated.</li>
+	<li>Jan 5: Frequent Asked Questions and corresponding answers are now available on the <a href="faq.html">FAQ page</a>. Please look at it.
+	<li>Jan 3: Due of 1st call for challenge of online preliminary round has been extended to Jan 12, 2016 AoE!</li>
+	<li>Dec 25:
+	  <a href="preliminary.html">
+	    Preliminary round rules and HW environments announced.
+	</a></li>
+	<li>Dec 18: Java sample player updated.</li>
+	<li>Dec 16: Sample players in Java and Python 2 are now available in the <a href="software.html">Software</a> page.</li>
+      	  <li>Nov 26: <a href="rules.html">Rules</a> and <a href="software.html">Software</a> pages have been updated.
+      	  <li>Nov 24: <a href="http://arena.ai-comp.net/">Contest server</a> is opened! Currently, you can only register.
+      	  <li>Oct 7: <a href="schedule.html">Schedule</a> has been announced. There will be two chances to advance to the world final. Due date of 1st chance is Jan 8, 2016(TBD). 
+      	  <li>Sep 8: <a href="aboutgame-en.html">Preliminary game rule</a> is out!
+          <li>Sep 8: This preliminary website has been launched.
       </ul>
     </section>
 
@@ -128,12 +151,10 @@ and
       <h2>Registration and Submission</h2>
 
 <p>There is no age limit. Moreover contestants can participate in the contest as individual or team; there is no maximum number of team members.</p>
-<!--
-<p>Please register your information and submit your program on the contest server. (TBD)</p>
--->
+<p>Please register your information and submit your program on the <a href="http://arena.ai-comp.net/">contest server</a>. </p>
 
    <section id="prize">
-<h2>Prize (TBD)</h2>
+<h2>Prize</h2>
 
 <p>
 <b>For Preliminary round contestants (including World Finalists): </b>
@@ -141,48 +162,52 @@ and
 
 <p>
 Preliminary round contestants are invited to Banquet on the World final round date on a first-come, 
-first-served basis; the number of Banquet participants is limited. (TBD)
+first-served basis; the number of Banquet participants is limited.
 </p>
 
 <p>
-Students can freely attend sessions of the <a href="http://www.ipsj.or.jp/event/taikai/79/">79th IPSJ Annual Convention by register themselves at the Convention site</a>. (TBD)
+Students can freely attend sessions of the <a href="http://www.ipsj.or.jp/event/taikai/78/">78th IPSJ Annual Convention by register themselves at the Convention site</a>.
 </p>
 
 <p><b>For World Finalists: </b></p>
 
 <p>
-Winners of World Final will receive prizes (TBD). Moreover there will be some Sponsor Awards and Gifts (TBD).
+Winners of World Final will receive prizes totaling 100,000JPY (TBD). Moreover there will be some Sponsor Awards and Gifts (TBD).
 </p>
 
 <p>
-World Final contestants who are not IPSJ members will receive one-year IPSJ membership without any entry fee and annual fee. (The entry fee is originally necessary for IPSJ regular members.) (TBD)
+World Final contestants who are not IPSJ members will receive one-year IPSJ membership without any entry fee and annual fee. (The entry fee is originally necessary for IPSJ regular members.)
 </p>
 
 <p>
-Travel expenses of World final contestants will be partially supported (TBD).
-Last year World final contestants from out side of Japan received travel expenses up 
-to 100,000JPY per team, 
+Travel expenses of World final contestants will be partially supported. 
+Last year World final contestants from out side of Japan received travel expenses up to 100,000JPY, 
 and contestants from a long distance within Japan received full travel expenses.
 </p>
 
 <p>
-All World Final contestants will be presented on the contest site.
+All World Final contestants will be presented on the contest site.	
 </p>
 
     </section>
 
     <section id="importantdates">
-      <h2>Important Dates (TBD)</h2>
+      <h2>Important Dates</h2>
       <ul>
-      	<li>Rule announcement: Sep-Oct 2016</li>
-        <li>Online preliminary round: Nov 2016-Feb 2017</li>
-        <li>World final round in Nagoya (collocated with 79th IPSJ National Convention at <a href="http://en.nagoya-u.ac.jp/access/index.html">Nagoya University, Higashiyama Campus</a>): March 17, 2017</li>
+      	<li>Rule and platform announcement: Oct-Nov 2015</li>
+        <li>Due of 1st call for challenge of online preliminary round: Feb 8, 2016 AoE</li>
+        <li>Result announcement of 1st call for challenge of online preliminary round: Feb 12, 2016. Nine teams will be selected for the world final. Among them, up to three teams will be selected in consideration of diversity and geographical distribution. 
+</li>
+        <li>Due of 2nd call for challenge of online preliminary round: Feb 22, 2016 AoE</li>
+        <li>Result announcement of 2nd call for challenge of online preliminary round: Feb 26, 2016 AoE (TBD). Nine teams will be selected for the world final. Among them, up to three teams will be selected in consideration of diversity and geographical distribution (TBD). 
+</li>
+        <li>World final round in Yokohama (collocated with 78th IPSJ National Convention at <a href="http://www.keio.ac.jp/en/maps/yagami.html">Keio University, Yagami Campus</a>): March 11, 2016</li>
       </ul>
     </section>
 
 <section id="game">
       <h2>Game and AI</h2>
-<p>Contestants compete on their design and engineering skills of algorithms and AI strategies in addition to programming skills. See details at <a href="rules.html">Game Rules</a>.</p>
+<p>Contestants compete on their design and engineering skills of algorithms and AI strategies in addition to programming skills. See details at <a href="aboutgame-en.html">Game Rules</a>.</p>
 <p>Contestants can choose a certain programming language among various major languages including C++ and Java. (TBD)</p>
 </section>
     <section class="centered">
@@ -193,9 +218,10 @@ All World Final contestants will be presented on the contest site.
       <h2>Committee</h2>
 
  <p>Hironori Washizaki (Director), Tasuku Hiraishi (Vice-Director), Takashi Chikayama (Executive Advisor), 
- Ikuo Takeuchi, Shingo Takada, Matsuki Yoshino, Kazunori Sakamoto, Tetsuro Tanaka, Makoto Miwa, Michiko Oba, Noriko Fukazawa, Hiroshi Suzuki
+ Ikuo Takeuchi, Shingo Takada, Matsuki Yoshino, Kazunori Sakamoto,
+ Tetsuro Tanaka, Jun Nitta, Michiko Oba, Noriko Fukazawa
  </p>
-      <h2>Game Design Team (in 2015)</h2>
+      <h2>Game Design Team</h2>
       <p>Kazuma Hashimoto, Hirotaka Kameko, Yusei Kawakami, Yun-Ching Liu, Ryo Suzuki, Taisuke Yokoi
 </p>
     </section>
@@ -211,9 +237,9 @@ All World Final contestants will be presented on the contest site.
       	    <p class=address>Kagaku-kaikan (Chemistry Hall) 4F<br>
       	      1-5 Kanda-Surugadai, Chiyoda-ku,
       	      Tokyo 101-0062 JAPAN<br>
-      	    email: <a class="contactadddr" href="mailto:samurai-contact@ipsj.or.jp">
+      	    email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
 
-      		  samurai-contact@ipsj.or.jp</a><br>
+      		  samurai2015-contact@ipsj.or.jp</a><br>
             web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
             </p>
             <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>
@@ -222,7 +248,6 @@ All World Final contestants will be presented on the contest site.
       	<td width="300">
       	  <section id="sponsors">
             <h3>Gold Sponsors</h3>
-<!--
             <p>e-Seikatsu Co., Ltd.<br>
             <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"/></a></p>
           <p>Hitachi, Ltd.<br>
@@ -232,9 +257,7 @@ All World Final contestants will be presented on the contest site.
 <p>TIS Inc.<br>
 <a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a>
 </p>
--->
             <h3>Supporters</h3>
-<!--
 <p>Vocal School, Venus<br>
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 </p>
@@ -245,20 +268,16 @@ All World Final contestants will be presented on the contest site.
 <p>Cray Japan Inc.<br>
 <a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
 </p>
--->
 
 <h3>Media Sponsors</h3>
-<!--
             <p>GSTYLUS<br>
             <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
 <p><a href="https://moneyforward.com/">Money Forward, Inc.</a></p>
       	  </section>
--->
       	</td>
       	<td>
       	  <section id="supporters">
       	    <h3>Supporters</h3>
-<!--
             <p class="smaller">
 China Computer Federation<br>
 <a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="80"/></a><br><br>
@@ -300,7 +319,7 @@ The Korean Institute of Information Scientists and Engineers<br>
 The Ministry of Economy, Trade and Industry<br><br>
 
 The Ministry of Education, Culture, Sports, Science and Technology
--->
+
              </p>
           </section>
       	</td>
