--- a/2015-16/preliminary-jp.html
+++ b/2015-16/preliminary-jp.html
@@ -903,7 +903,7 @@ tree, uoshi, vex, ガオガイガー
             <p>株式会社ジースタイラス<br>
             <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
 
-<p><a href="https://moneyforward.com/">株式会社マネーフォワード</a></p><p><a href="https://moneyforward.com/">株式会社マネーフォワード</a></p>
+<p><a href="https://moneyforward.com/">株式会社マネーフォワード</a></p>
           </section>
         </td>
         <td>
