--- a/2015-16/schedule-jp.html
+++ b/2015-16/schedule-jp.html
@@ -3,9 +3,9 @@
   <!--#include virtual="commonhead.html" -->
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="SamurAI Coding 2016-17">
+  <meta name="description" content="SamurAI Coding 2015-16">
   <meta name="author" content="Hironori Washizaki">
-  <title>SamurAI Coding 2016-17</title>
+  <title>SamurAI Coding 2015-16</title>
   <link rel="stylesheet" href="stylesheets/default.css">
 </head>
 
@@ -15,7 +15,6 @@
 <center>
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
   <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a><br>
-<!--
 <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
 <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a>
@@ -33,19 +32,18 @@
 <a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="70"/></a>
 <img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="60"/></a>
 <a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a>
--->
 
 </center>  <nav id="global">
       <ul>
         <li><a href="index-jp.html">ホーム</a></li>
-        <li>日程</li>
+        <li><a href="schedule-jp.html">日程</a></li>
         <li><a href="rules-jp.html">ルール</a></li>
-        <li>ソフトウェア</li>
-        <li>チュートリアル</a></li>
-        <li>参加登録</a></li>
-        <li>予選</a></li>
-        <li>決勝</a></li>
-        <li>FAQ</a></li>
+        <li><a href="software-jp.html">ソフトウェア</a></li>
+        <li><a href="tutorial-jp.html">チュートリアル</a></li>
+        <li><a href="http://arena.ai-comp.net/">参加登録</a></li>
+        <li><a href="preliminary-jp.html">予選</a></li>
+        <li><a href="final-jp.html">決勝</a></li>
+        <li><a href="faq-jp.html">FAQ</a></li>
         <li><a href="sponsor-jp.html">スポンサー</a></li>
         <li><a href="index.html">English</a></li>
       </ul>
@@ -53,28 +51,22 @@
 </header>
 <hr/>
 
-    <section id="main">
-	    <h2>SamurAI Coding のルール</h2>
-      <p>SamurAI Coding はプログラマが AI プログラミングの技倆を競うコンテストです。
-	コンテストでは、それぞれ3人のサムライからなるふたつの軍団が <em>SamurAI 3x3 2016</em> (サムライ スリー オン スリー 2016) という名のゲームを戦い、各 AI プログラムは同一軍団の3人のサムライを制御します。
-</p>
+    <section id="importantdates">
+      <h2>主要日程</h2>
       <ul>
-<!--
-	<li><a href="aboutgame-jp.html">
-	    SamurAI 3x3 ゲームの概要</a></li>
--->
-	<li><a href="rules-jp.pdf">
-	    ルールの詳細とプログラミングインタフェース</a></li>
-<!--
-	<li>予選と決勝のトーナメントルールについては、それぞれ
-	  <a href="preliminary-jp.html">予選のページ</a>および
-	  <a href="final-jp.html">決勝のページ</a>をご覧ください。</li>
--->
+        <li>ルール公開、応募受付開始：2015年10-11月</li>
+<font color="red"><b>
+        <li>オンライン予選 1次募集締切：2016年2月8日 AoE（日本時間 2月9日 20:59）システムのメンテナンスの実施に伴い延長しました</li>
+        <li>オンライン予選 1次募集結果発表：2016年2月12日（予定）9チーム程度選抜（うち3チーム程度は多様性および地域バランス等を考慮した特別選抜枠の予定）</li>
+        <li>オンライン予選 2次募集締切：2016年2月22日 AoE（日本時間 2月23日 20:59）システムのメンテナスの実施に伴い延長しました
+</li>
+        <li>オンライン予選 2次募集結果発表：2016年2月26日（予定）9チーム程度選抜（うち3チーム程度は多様性および地域バランス等を考慮した特別選抜枠の予定）</li>
+</b></font>
+        <li>決勝（於 慶應義塾大学） 　　：2016年3月11日　※<a href="http://www.ipsj.or.jp/event/taikai/78">情報処理学会第78回全国大会併催</a></li>
       </ul>
     </section>
 
 <hr/>
-    <!--#include virtual="footer-jp.html" -->
 <footer>
   <div>
     <table class="multicolumn">
@@ -83,15 +75,14 @@
           <section id="contact">
             <h3>情報処理学会</h3>
             <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 4階</p>
-            <p>email: <a class="contactadddr" href="mailto:samurai-contact@ipsj.or.jp">
-          samurai-contact@ipsj.or.jp</a></p>
+            <p>email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
+          samurai2015-contact@ipsj.or.jp</a></p>
           <a href="http://www.ipsj.or.jp/"><img src="images/IPSJ_logoB_M.gif" width="200"/></a>
           </section>
         </td>
         <td width="300">
           <section id="sponsors">
             <h3>ゴールドスポンサー</h3>
-<!--
             <p>株式会社いい生活<br>
             <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
 <p>株式会社日立製作所<br>
@@ -103,10 +94,9 @@
 <p>TIS株式会社<br>
 <a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a>
 </p>
--->
+
 
             <h3>サポーター</h3>
-<!--
 <p>ヴォーカル・スクール ヴィーナス<br>
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 </p>
@@ -118,21 +108,17 @@
 <p>クレイ・ジャパン・インク<br>
 <a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
 </p>
--->
 
 <h3>メディアスポンサー</h3>
-<!--
             <p>株式会社ジースタイラス<br>
             <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
 
 <p><a href="https://moneyforward.com/">株式会社マネーフォワード</a></p>
--->
           </section>
         </td>
         <td>
           <section id="supporters">
             <h3>協賛</h3>
-<!--
             <p class="smaller">
 
 China Computer Federation<br>
@@ -169,18 +155,16 @@ IEEE Japan Office<br>
 
 The Korean Institute of Information Scientists and Engineers<br>
 <a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a>
--->
+
             </p>
           </section>
           <section id="backers">
             <h3>後援</h3>
-<!--
             <p class="smaller">
 独立行政法人情報処理推進機構<br><br>
 経済産業省<br><br>
 文部科学省
             </p>
--->
           </section>
         </td>
       </tr>
