--- a/2015-16/tutorial.html
+++ b/2015-16/tutorial.html
@@ -23,7 +23,8 @@
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 <a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
 <a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
-<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a><br>
+<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a> 
+<a href="https://moneyforward.com/">Money Forward</a><br>
 <a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="60"/></a>
 <a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="50"/></a>
 <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="100"/></a>
@@ -52,11 +53,10 @@
 </header>
 <hr/>
 
-   <section id="importantdates">
-      <h2>Hardware Environment of Preliminary Rounds</h2>
-      <ul>
-	<li>CPU: Intel Xeon E6-2640 2.50GHz</li>
-      </ul>
+   <section id="main">
+      <h2>Tutorial</h2>
+      <p>(TBD)</p>
+    </section>
 
 <hr>
 <footer>
