--- a/sponsor-jp.html
+++ b/sponsor-jp.html
@@ -3,9 +3,9 @@
   <!--#include virtual="commonhead.html" -->
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="SamurAI Coding 2015-16">
+  <meta name="description" content="SamurAI Coding 2016-17">
   <meta name="author" content="Hironori Washizaki">
-  <title>SamurAI Coding 2015-16</title>
+  <title>SamurAI Coding 2016-17</title>
   <link rel="stylesheet" href="stylesheets/default.css">
 </head>
 
@@ -15,6 +15,7 @@
 <center>
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
   <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a><br>
+<!--
 <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
 <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a>
@@ -32,18 +33,19 @@
 <a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="70"/></a>
 <img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="60"/></a>
 <a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a>
+-->
 
 </center>  <nav id="global">
       <ul>
         <li><a href="index-jp.html">ホーム</a></li>
-        <li><a href="schedule-jp.html">日程</a></li>
+        <li>日程</li>
         <li><a href="rules-jp.html">ルール</a></li>
-        <li><a href="software-jp.html">ソフトウェア</a></li>
-        <li><a href="tutorial-jp.html">チュートリアル</a></li>
-        <li><a href="http://arena.ai-comp.net/">参加登録</a></li>
-        <li><a href="preliminary-jp.html">予選</a></li>
-        <li><a href="final-jp.html">決勝</a></li>
-        <li><a href="faq-jp.html">FAQ</a></li>
+        <li>ソフトウェア</li>
+        <li>チュートリアル</a></li>
+        <li>参加登録</a></li>
+        <li>予選</a></li>
+        <li>決勝</a></li>
+        <li>FAQ</a></li>
         <li><a href="sponsor-jp.html">スポンサー</a></li>
         <li><a href="index.html">English</a></li>
       </ul>
@@ -54,15 +56,14 @@
     <section id="main">
       <h2>スポンサー募集</h2>
       <p>
-情報処理学会では2012年度より、新たな取り組みといたしまして、昨今のインターネット産業の急速な発展によるエンジニアの質と量の確保が
-ますます重要となるなか、若い世代から将来第一線の研究者や開発者になりうる、また世界市場を舞台に活躍できる人材を育てることを開催の
+情報処理学会では2012年度より、新たな取り組みといたしまして、昨今のインターネット・IoT産業および人工知能技術の急速な発展によるエンジニアの質と量の確保がますます重要となるなか、若い世代から将来第一線の研究者や開発者になりうる、また世界市場を舞台に活躍できる人材を育てることを開催の
 目的として、AIプログラミングコンテスト、IPSJ International AI Programming Contest "SamurAI Coding" を開催しております。
       </p>
       <p>
-今年度も SamurAI Coding 2015-16 を開催いたします。ゲームをテーマにしたプログラミングスキルを競います。世界規模の大会を目指し、世界中から参加者を募りネット上で予選を開催、予選を勝ち抜いたチームが2016年3月に日本で開催する決勝へ進みます。参加エンジニアはその能力が世界で通用するか本コンテストを通じて試すことができます。
+今年度も SamurAI Coding 2016-17 を開催いたします。ゲームをテーマにした人工知能プログラミングスキルを競います。世界規模の大会を目指し、世界中から参加者を募りネット上で予選を開催、予選を勝ち抜いたチームが2017年3月に日本で開催する決勝へ進みます。参加エンジニアはその能力が世界で通用するか本コンテストを通じて試すことができます。
 決勝では、アワードセレモニーも開催し、上位入賞者を表彰します。決勝進出者、スポンサー企業の皆様等との交流の場として懇親会の席も設ける予定です。
 さらにスポンサー種別によっては、参加者の企業見学の受け入れをご希望いただくことも可能です。
-ご賛同を頂ける場合には、<a href="https://www.ipsj.or.jp/02moshikomi/event/samurai_coding2015-16_sponsor.html">こちらの申込Webページ</a> よりお申込ください。
+ご賛同を頂ける場合には、<a href="https://www.ipsj.or.jp/02moshikomi/event/samurai_coding2016-17_sponsor.html">こちらの申込Webページ</a> よりお申込ください。
       </p>
     </section>
 
@@ -76,14 +77,15 @@
           <section id="contact">
             <h3>情報処理学会</h3>
             <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 4階</p>
-            <p>email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
-          samurai2015-contact@ipsj.or.jp</a></p>
+            <p>email: <a class="contactadddr" href="mailto:samurai-contact@ipsj.or.jp">
+          samurai-contact@ipsj.or.jp</a></p>
           <a href="http://www.ipsj.or.jp/"><img src="images/IPSJ_logoB_M.gif" width="200"/></a>
           </section>
         </td>
         <td width="300">
           <section id="sponsors">
             <h3>ゴールドスポンサー</h3>
+<!--
             <p>株式会社いい生活<br>
             <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
 <p>株式会社日立製作所<br>
@@ -95,9 +97,10 @@
 <p>TIS株式会社<br>
 <a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a>
 </p>
-
+-->
 
             <h3>サポーター</h3>
+<!--
 <p>ヴォーカル・スクール ヴィーナス<br>
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 </p>
@@ -109,17 +112,21 @@
 <p>クレイ・ジャパン・インク<br>
 <a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
 </p>
+-->
 
 <h3>メディアスポンサー</h3>
+<!--
             <p>株式会社ジースタイラス<br>
             <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
 
 <p><a href="https://moneyforward.com/">株式会社マネーフォワード</a></p>
+-->
           </section>
         </td>
         <td>
           <section id="supporters">
             <h3>協賛</h3>
+<!--
             <p class="smaller">
 
 China Computer Federation<br>
@@ -156,16 +163,18 @@ IEEE Japan Office<br>
 
 The Korean Institute of Information Scientists and Engineers<br>
 <a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a>
-
+-->
             </p>
           </section>
           <section id="backers">
             <h3>後援</h3>
+<!--
             <p class="smaller">
 独立行政法人情報処理推進機構<br><br>
 経済産業省<br><br>
 文部科学省
             </p>
+-->
           </section>
         </td>
       </tr>
