--- a/2015-16/faq.html
+++ b/2015-16/faq.html
@@ -23,7 +23,8 @@
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 <a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
 <a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
-<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a><br>
+<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a> 
+<a href="https://moneyforward.com/">Money Forward</a><br>
 <a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="60"/></a>
 <a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="50"/></a>
 <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="100"/></a>
@@ -53,19 +54,32 @@
 <hr/>
 
    <section id="importantdates">
-      <h2>Important Dates</h2>
-      <ul>
-      	<li>Rule and platform announcement: Oct-Nov 2015</li>
-<font color="red"><b>
-        <li>Due of 1st call for challenge of online preliminary round: Feb 8, 2016 AoE</li>
-        <li>Result announcement of 1st call for challenge of online preliminary round: Feb 12, 2016 (TBD). Nine teams will be selected for the world final. Among them, up to three teams will be selected in consideration of diversity and geographical distribution (TBD). 
+      <h2>FAQ</h2>
+      <p>Frequent Asked Questions and corresponding answers are available here.</p>
+      <p>If you have any question, please contact us at <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">samurai2015-contact@ipsj.or.jp</a></p>
+
+<ul>
+<li>Q1. Does the rule "The AIs have to respond within 5 seconds" in the 
+"Game Setting" section of the "SamurAI Coding 2015-16 Preliminary Round Rules" 
+include the compilation time?
+<br>
+A1. No.
 </li>
-        <li>Due of 2nd call for challenge of online preliminary round: Feb 22, 2016 AoE</li>
-        <li>Result announcement of 2nd call for challenge of online preliminary round: Feb 26, 2016 AoE (TBD). Nine teams will be selected for the world final. Among them, up to three teams will be selected in consideration of diversity and geographical distribution (TBD). 
+<li>Q2. Can teams who fail to advance to the World final round at the 1st call for challenge of online preliminary round take part in the 2nd call for challenge of online preliminary round?
+<br>
+A2. Yes.
+
 </li>
-</b></font>
-        <li>World final round in Yokohama (collocated with 78th IPSJ National Convention at <a href="http://www.keio.ac.jp/en/maps/yagami.html">Keio University, Yagami Campus</a>): March 11, 2016</li>
-      </ul>
+<li>Q3. Can teams change their programs for the World final round after getting through the online preliminary round?
+<br>
+A3. Yes. Due date of the submission for the World final will be set and announced later.
+<li>Q4. Sometimes my program encouters "Timeout" at the 1st turn on the server, although the program does not fail to meet the time limit in my local environment. <br>
+A4. The issue is under investigation. 
+During the preliminary round, 
+we will try to carefully address each case of "Timeout" in consideration of fairness. 
+</li>
+</ul>
+
     </section>
 
 <hr>
@@ -169,7 +183,6 @@ The Ministry of Education, Culture, Sports, Science and Technology
     </table>
   </div>
 </footer>
-
 
   </body>
 </html>
