--- a/2015-16/rules-jp.html
+++ b/2015-16/rules-jp.html
@@ -52,30 +52,18 @@
 <hr/>
 
     <section id="main">
-	  <h2>ソフトウェア</h2>
-      <p>SamurAI 3x3 ゲーム関連のソフトウェアとして、以下のものが公開されています。
+	    <h2>SamurAI Coding のルール</h2>
+      <p>SamurAI Coding はプログラマが AI プログラミングの技倆を競うコンテストです。
+	コンテストでは、それぞれ3人のサムライからなるふたつの軍団が <em>SamurAI 3x3</em> (サムライ スリー オン スリー) という名のゲームを戦い、各 AI プログラムはそのうちひとりのサムライを制御します。
+	コンテストでは異なる軍団の組合せで多くのゲームを戦い、最高の合計スコアをあげたサムライを制御するプログラムが勝者となります。</p>
       <ul>
-	<li><a href="software/SamurAImanager-0106.tgz">
-	    SamurAI 3x3 ゲームの実行管理システム</a>:
-	  サムライを制御する AI プログラムを呼び出して、ルールにのっとってゲームの進行を管理します。
-	  いくつかの AI プログラムのサンプルも含まれています。
-	  システムやサンプル AI プログラムは C++11 で記述してあります。<br>
-	  1月6日の更新で AI の指定のしかたなどのインタフェースが変更されました。
-	  詳しくは README.jp を見てください。
-	  従来の版と同じ出力形式のためには -t オプションを指定してください。
-	</li>
-	<li>
-	  C++ 以外の言語で記述したサンプル AI プログラム。
-	  <ul>
-	    <li><a href="software/python2-player-0106.tgz">Python 2 (1月6日更新)</a></li>
-	    <li><a href="software/java-player-1218.tgz">Java (12月18日更新)</a></li>
-	  </ul>
-	</li>
-	<li><a href="software/SamurAI_Visualizer.jar">
-	    ゲームログの可視化ツール</a>:
-	  実行管理システムが出力するゲームログをグラフィカルに可視化するプログラムです。
-	  このツールは Java で記述してあります。
-	</li>
+	<li><a href="aboutgame-jp.html">
+	    SamurAI 3x3 ゲームの概要</a></li>
+	<li><a href="ruledetails-1116-jp.pdf">
+	    ルールの詳細とプログラミングインタフェース</a></li>
+	<li>予選と決勝のトーナメントルールについては、それぞれ
+	  <a href="preliminary-jp.html">予選のページ</a>および
+	  <a href="final-jp.html">決勝のページ</a>をご覧ください。</li>
       </ul>
     </section>
 
@@ -127,7 +115,7 @@
             <p>株式会社ジースタイラス<br>
             <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
 
-<p>株式会社マネーフォワード</p>
+<p><a href="https://moneyforward.com/">株式会社マネーフォワード</a></p>
           </section>
         </td>
         <td>
