--- a/2015-16/rules.html
+++ b/2015-16/rules.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
 <html>
   <!--#include virtual="commonhead.html" -->
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="SamurAI Coding 2015-16">
+  <meta name="Description" content="SamurAI Coding 2015-16">
   <meta name="author" content="Hironori Washizaki">
   <title>SamurAI Coding 2015-16</title>
   <link rel="stylesheet" href="stylesheets/default.css">
 </head>
 
   <body>
-    <!--#include virtual="header-jp.html" -->
+  <!--#include virtual="header.html" -->
 <header id="mast">
 <center>
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
@@ -19,10 +18,12 @@
 <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a>
 <a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a><br>
+<br>
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 <a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
 <a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
-<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a> <a href="https://moneyforward.com/">マネーフォワード</a><br>
+<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a> 
+<a href="https://moneyforward.com/">Money Forward</a><br>
 <a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="60"/></a>
 <a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="50"/></a>
 <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="100"/></a>
@@ -33,88 +34,103 @@
 <img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="60"/></a>
 <a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a>
 
-</center>  <nav id="global">
+</center>
+  <nav id="global">
       <ul>
-        <li><a href="index-jp.html">ホーム</a></li>
-        <li><a href="schedule-jp.html">日程</a></li>
-        <li><a href="rules-jp.html">ルール</a></li>
-        <li><a href="software-jp.html">ソフトウェア</a></li>
-        <li><a href="tutorial-jp.html">チュートリアル</a></li>
-        <li><a href="http://arena.ai-comp.net/">参加登録</a></li>
-        <li><a href="preliminary-jp.html">予選</a></li>
-        <li><a href="final-jp.html">決勝</a></li>
-        <li><a href="faq-jp.html">FAQ</a></li>
-        <li><a href="sponsor-jp.html">スポンサー</a></li>
-        <li><a href="index.html">English</a></li>
+        <li><a href=".">Home</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+        <li><a href="rules.html">Rules</a></li>
+        <li><a href="software.html">Software</a></li>
+        <li><a href="tutorial.html">Tutorial</a></li>
+        <li><a href="http://arena.ai-comp.net/">Entry</a></li>
+        <li><a href="preliminary.html">Preliminary</a></li>
+        <li><a href="final.html">Final</a></li>
+        <li><a href="faq.html">FAQ</a></li>
+        <li><a href="index-jp.html">Japanese</a></li>
       </ul>
   </nav>
 </header>
 <hr/>
-
-   <section id="main">
-      <h2>チュートリアル</h2>
-<p>(TBD)</p>
+    <section id="main">
+	  <h2>SamurAI Coding Rules</h2>
+      <p>SamurAI Coding is a programming contest in which programmers
+	compete for their superiority in AI programming skills.  In
+	the contest, the game named <em>SamurAI 3x3</em> (samurai
+	three on three) is played by two armies of three samurai each,
+	and each of participating AI programs controls one of the
+	samurai in each game.  Many games with different army
+	composition are played in a contest and the winner will be the
+	program controlling the samurai with the highest total
+	score.</p>
+      <ul>
+	<li><a href="aboutgame-en.html">
+	    Outline of the Samurai 3x3 Game</a></li>
+	<li><a href="ruledetails-1116-en.pdf">
+	    Rule Details and Programming Interface</a></li>
+	<li>Tournament rules are described
+	  in <a href="preliminary.html">the preliminary round page</a>
+	  and <a href="final.html">the final round page</a>.</li>
+      </ul>
     </section>
+    <!--#include virtual="footer.html" -->
 
-<hr/>
+<hr>
 <footer>
   <div>
     <table class="multicolumn">
       <tr>
-        <td width="250">
-          <section id="contact">
-            <h3>情報処理学会</h3>
-            <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 4階</p>
-            <p>email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
-          samurai2015-contact@ipsj.or.jp</a></p>
-          <a href="http://www.ipsj.or.jp/"><img src="images/IPSJ_logoB_M.gif" width="200"/></a>
-          </section>
-        </td>
-        <td width="300">
-          <section id="sponsors">
-            <h3>ゴールドスポンサー</h3>
-            <p>株式会社いい生活<br>
-            <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
-<p>株式会社日立製作所<br>
-<a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a></p>
+      	<td width="250">
+      	  <section id="contact">
+      	    <h3>Information Processing Society of Japan</a></h3>
+      	    <p class=address>Kagaku-kaikan (Chemistry Hall) 4F<br>
+      	      1-5 Kanda-Surugadai, Chiyoda-ku,
+      	      Tokyo 101-0062 JAPAN<br>
+      	    email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
 
-<p>株式会社レコチョク<br>
+      		  samurai2015-contact@ipsj.or.jp</a><br>
+            web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
+            </p>
+            <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>
+      	  </section>
+      	</td>
+      	<td width="300">
+      	  <section id="sponsors">
+            <h3>Gold Sponsors</h3>
+            <p>e-Seikatsu Co., Ltd.<br>
+            <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"/></a></p>
+          <p>Hitachi, Ltd.<br>
+            <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="145"/></a></p>
+<p>RecoChoku Co.,Ltd.<br>
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a></p>
-
-<p>TIS株式会社<br>
+<p>TIS Inc.<br>
 <a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a>
 </p>
-
-
-            <h3>サポーター</h3>
-<p>ヴォーカル・スクール ヴィーナス<br>
+            <h3>Supporters</h3>
+<p>Vocal School, Venus<br>
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 </p>
 
-<p>富士通株式会社<br>
-<a href="http://www.fujitsu.com/jp/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
+<p>Fujitsu Limited<br>
+<a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
 </p>
-
-<p>クレイ・ジャパン・インク<br>
+<p>Cray Japan Inc.<br>
 <a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
 </p>
 
-<h3>メディアスポンサー</h3>
-            <p>株式会社ジースタイラス<br>
+<h3>Media Sponsors</h3>
+            <p>GSTYLUS<br>
             <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
-
-<p>株式会社マネーフォワード</p>
-          </section>
-        </td>
-        <td>
-          <section id="supporters">
-            <h3>協賛</h3>
+<p><a href="https://moneyforward.com/">Money Forward, Inc.</a></p>
+      	  </section>
+      	</td>
+      	<td>
+      	  <section id="supporters">
+      	    <h3>Supporters</h3>
             <p class="smaller">
-
 China Computer Federation<br>
 <a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="80"/></a><br><br>
 
-慶應義塾大学理工学部情報工学科<br>
+Department of Information and Computer Science, Faculty of Science and Technology, Keio University<br>
 <a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="60"/></a><br><br>
 
 IEEE Computer Society<br>
@@ -125,41 +141,40 @@ IEEE Computer Society Japan Chapter<br><br>
 IEEE Japan Office<br>
 <a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="80"/></a><br><br>
 
-財団法人 情報科学国際交流財団<br><br>
+Information Technology Promotion Agency, Japan<br><br>
 
-一般社団法人電子情報技術産業協会<br>
+International Information Science Foundation<br><br>
+
+Japan Electronics and Information Technology Industries Association<br>
 <a href="http://www.jeita.or.jp/"><img src="images/JEITA.jpg" title="Japan Electronics and Information Technology Industries Association" width="90"/></a><br><br>
 
-一般社団法人情報サービス産業協会<br>
+Japan Information Technology Services Industry Association<br>
 <a href="http://www.jisa.or.jp/"><img src="images/JISA.png" title="Japan Information Technology Services Industry Association" width="90"/></a><br><br>
 
-一般社団法人日本ソフトウェア科学会<br>
+Japan Society for Software Science and Technology<br>
 <a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="90"/></a><br><br>
 
-一般社団法人日本情報システム・ユーザー協会<br><br>
+Japan Users Association of Information Systems<br><br>
 
-一般社団法人電子情報通信学会<br><br>
+The Institute of Electronics, Information and Communications Engineers<br><br>
 
-一般社団法人人工知能学会<br>
+The Japanese Society for Artificial Intelligence<br>
 <a href="http://www.ai-gakkai.or.jp/"><img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="70"/></a><br><br>
 
 The Korean Institute of Information Scientists and Engineers<br>
-<a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a>
+<a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a><br><br>
 
-            </p>
+The Ministry of Economy, Trade and Industry<br><br>
+
+The Ministry of Education, Culture, Sports, Science and Technology
+
+             </p>
           </section>
-          <section id="backers">
-            <h3>後援</h3>
-            <p class="smaller">
-独立行政法人情報処理推進機構<br><br>
-経済産業省<br><br>
-文部科学省
-            </p>
-          </section>
-        </td>
+      	</td>
       </tr>
     </table>
   </div>
 </footer>
+
   </body>
 </html>
