--- a/2015-16/schedule.html
+++ b/2015-16/schedule.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <meta name="description" content="SamurAI Coding 2015-16">
-    <meta name="author" content="Takashi Chikayama">
-    <title>SamurAI 3x3: Game Outline</title>
-    <link rel="stylesheet" href="http://samuraicoding.info/stylesheets/default.css">
-  </head>
-  
-  <header id="mast">
+  <!--#include virtual="commonhead.html" -->
+<head>
+  <meta charset="utf-8">
+  <meta name="Description" content="SamurAI Coding 2015-16">
+  <meta name="author" content="Hironori Washizaki">
+  <title>SamurAI Coding 2015-16</title>
+  <link rel="stylesheet" href="stylesheets/default.css">
+</head>
+
+  <body>
+  <!--#include virtual="header.html" -->
+<header id="mast">
 <center>
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
   <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a><br>
@@ -21,7 +23,8 @@
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 <a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
 <a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
-<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a><br>
+<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a> 
+<a href="https://moneyforward.com/">Money Forward</a><br>
 <a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="60"/></a>
 <a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="50"/></a>
 <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="100"/></a>
@@ -48,56 +51,23 @@
       </ul>
   </nav>
 </header>
-  
-  <hr/>
-  <section class=centered>
-    <img src="./banner.png" title="Banner" width=100%>
-  </section>
-  <section id="abstract">
-    <p><em>SamurAI 3x3</em> (three on three) is a game played with two corps each consisting of three samurai with different weapons, competing for
-broader territory. Each contestant provides an AI program that
-decides actions of one of the samurai, playing games cooperating with
-two other AI programs controlling other samurai. The total score through
-many games, controlling samurai with different weapons with combinations
-of different AI programs, decides the tournament results.
-</p>
-    <p>A brief outline of the game is described below.  Note that game details might be tuned later for better game balance.</p>
-  </section>
-  <section id="main">
-    <h2>1 Game Field and Scoring</h2>
-    <p>The battlefield of the game is mesh-partitioned into squares.  Two corps try to occupy more the squares in the field.  The winner points are given to all the samurai in the corps obtaining more squares, while, whether won or lost, individual samurai are awarded with points proportional to the number of squares which they finally occupied.  Such a game is repeated with different combinations of samurai corps and the total score decides the tournamen results.</p>
-    <h2>2 Actions of Samurai</h2>
-    <p>Each samurai has chances to take actions in turn.  Any number of actions can be chosen within their total cost of 7.</p>
-    <ul>
-      <li>Hide (cost 1): Samurai in friend territory can hide himself from the eyes of enemy corps.</li>
-      <li>Show (cost 1): Hiding samurai can show himself if he is in a square with no other shown samurai.</li>
-      <li>Move (cost 2): Samurai can move to one of four adjacent squares.  No two samurai can be in a single square when both are not hiding.  Hiding samurai can only move to friend territory.</li>
-      <li>Occupy (cost 4): Samurai can occupy some of the squares close-by, making them friend territory.  Occupation is possible not also for neutral or enemy teritory squares but also for squares already occupied by other samurai of the friend corps.  Squares occupied depends on the weapon wielded.  Enemy samurai in the occupied squares are injured, forced to warp back to his home position, and disabled his action for the prescribed number of turns.</li>
-    </ul>
-    <div style="width: 350px; float: right;">
-      <table style="width: 100%; text-align: center;">
-	<tr>
-	  <td><img src="spear.png" title="Spear" width=100%></td>
-	  <td><img src="swords.png" title="Swords" width=100%></td>
-	  <td><img src="battleaxe.png" title="Battleaxe" width=100%></td>
-	</tr>
-	<tr>
-	  <td>Spear</td>
-	  <td>Swords</td>
-	  <td>Battleaxe</td>
-	</tr>
-      </table>
-    </div>
-    <p>Any combinations of these actions are possible: "Move to target an enemy and occupy" is one option; Ninja actions such as "Show, occupy, and hide again" or "Show, move through enemy territory to a firendly terrotry, and hide" are also be possible.  This is where your "AI" is tested whether it is actually intelligent or not.</p>
-    <p>Three samurai of a corps wield different weapons (a spear, swords, or a battleaxe).  The squares occupied with one action depends on the weapon wielded.  When the samurai is on the square shown in the figures, squares painted green can be occupied.  Occupation actions can be toward any rotations of muliples of 90 degrees of the shown direction.</p>
-    <h2>3 Available Information</h2>
-    <img src="visionfield.png" width=300 style="float:right;">
-    <p>Information is available only on squares within the vision fields of the samurai of friend corps.  Vision of a samurai is limited to squares within Manhattan distance of five from where the samurai is at.  For such squares, the samurai can know whether the square has ever been occupied and, if so, who occupied it last.  The position of all friend samurai and their hide/show state are known, while, for enemy samurai, their positions can only be detected when they show themselves within the vision fields of a friend samurai.  Samurai AI has to decide their action based on such limited information (and the memories at actions taken before).  Moving towards unexplored area for conveying information to the friends may form good tactics.</p>
-  </section>
+<hr/>
 
-  <section id="Snapshot" class="centered">
-    <img src="snapshot.png" width=100% title="Screen Snapshot">
-  </section>
+   <section id="importantdates">
+      <h2>Important Dates</h2>
+      <ul>
+      	<li>Rule and platform announcement: Oct-Nov 2015</li>
+<font color="red"><b>
+        <li>Due of 1st call for challenge of online preliminary round: Feb 8, 2016 AoE</li>
+        <li>Result announcement of 1st call for challenge of online preliminary round: Feb 12, 2016 (TBD). Nine teams will be selected for the world final. Among them, up to three teams will be selected in consideration of diversity and geographical distribution (TBD). 
+</li>
+        <li>Due of 2nd call for challenge of online preliminary round: Feb 22, 2016 AoE</li>
+        <li>Result announcement of 2nd call for challenge of online preliminary round: Feb 26, 2016 AoE (TBD). Nine teams will be selected for the world final. Among them, up to three teams will be selected in consideration of diversity and geographical distribution (TBD). 
+</li>
+</b></font>
+        <li>World final round in Yokohama (collocated with 78th IPSJ National Convention at <a href="http://www.keio.ac.jp/en/maps/yagami.html">Keio University, Yagami Campus</a>): March 11, 2016</li>
+      </ul>
+    </section>
 
 <hr>
 <footer>
