--- a/2015-16/software.html
+++ b/2015-16/software.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <!--#include virtual="commonhead.html" -->
 <head>
@@ -23,7 +22,8 @@
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 <a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
 <a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
-<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a><br>
+<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a> 
+<a href="https://moneyforward.com/">Money Forward</a><br>
 <a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="60"/></a>
 <a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="50"/></a>
 <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="100"/></a>
@@ -52,36 +52,39 @@
 </header>
 <hr/>
 
-   <section id="importantdates">
-      <h2>FAQ</h2>
-      <p>Frequent Asked Questions and corresponding answers are available here.</p>
-      <p>If you have any question, please contact us at <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">samurai2015-contact@ipsj.or.jp</a></p>
-
-<ul>
-<li>Q1. Does the rule "The AIs have to respond within 5 seconds" in the 
-"Game Setting" section of the "SamurAI Coding 2015-16 Preliminary Round Rules" 
-include the compilation time?
-<br>
-A1. No.
-</li>
-<li>Q2. Can teams who fail to advance to the World final round at the 1st call for challenge of online preliminary round take part in the 2nd call for challenge of online preliminary round?
-<br>
-A2. Yes.
-
-</li>
-<li>Q3. Can teams change their programs for the World final round after getting through the online preliminary round?
-<br>
-A3. Yes. Due date of the submission for the World final will be set and announced later.
-<li>Q4. Sometimes my program encouters "Timeout" at the 1st turn on the server, although the program does not fail to meet the time limit in my local environment. <br>
-A4. The issue is under investigation. 
-During the preliminary round, 
-we will try to carefully address each case of "Timeout" in consideration of fairness. 
-</li>
-</ul>
-
+    <section id="main">
+	  <h2>Software</h2>
+      <p>The following software systems are currently available for
+	the SamurAI 3x3 game.</p>
+      <ul>
+	<li><a href="software/SamurAImanager-0106.tgz">
+	    SamurAI 3x3 Game Management System</a>:
+	  Manages a SamurAI 3x3 game according to its rules, invoking
+	  AI programs to control samurai.
+	  Several sample AI programs are also included.
+	  The system and sample programs are written in C++11.<br>
+	  Note: The program interface revised on the release of Jan. 6th.
+	  See the README file for details.
+	  Specify the option -t to obtain the same output format
+	  as the former version.
+	</li>
+	<li>Sample AI programs in languages other than C++.
+	  <ul>
+	    <li><a href="software/python2-player-0106.tgz">Python 2 (updated on Jan. 6)</a></li>
+	    <li><a href="software/java-player-1218.tgz">Java (updated on Dec. 18)</a></li>
+	  </ul>
+	</li>
+	<li><a href="software/SamurAI_Visualizer.jar">
+	    Game Log Visualizer</a>:
+	  Graphical visualizer for game logs output by the game
+	  management system.
+	  This tool is written in Java.
+	</li>
+      </ul>
     </section>
 
 <hr>
+    <!--#include virtual="footer.html" -->
 <footer>
   <div>
     <table class="multicolumn">
