--- a/index-jp.html
+++ b/index-jp.html
@@ -3,9 +3,9 @@
   <!--#include virtual="commonhead.html" -->
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="SamurAI Coding 2015-16">
+  <meta name="description" content="SamurAI Coding 2016-17">
   <meta name="author" content="Hironori Washizaki">
-  <title>SamurAI Coding 2015-16</title>
+  <title>SamurAI Coding 2016-17</title>
   <link rel="stylesheet" href="stylesheets/default.css">
 </head>
 
@@ -15,6 +15,7 @@
 <center>
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
   <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a><br>
+<!--
 <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
 <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a>
@@ -32,19 +33,19 @@
 <a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="70"/></a>
 <img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="60"/></a>
 <a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a>
-
+-->
 </center>
   <nav id="global">
       <ul>
         <li><a href="index-jp.html">ホーム</a></li>
-        <li><a href="schedule-jp.html">日程</a></li>
+        <li>日程</li>
         <li><a href="rules-jp.html">ルール</a></li>
-        <li><a href="software-jp.html">ソフトウェア</a></li>
-        <li><a href="tutorial-jp.html">チュートリアル</a></li>
-        <li><a href="http://arena.ai-comp.net/">参加登録</a></li>
-        <li><a href="preliminary-jp.html">予選</a></li>
-        <li><a href="final-jp.html">決勝</a></li>
-        <li><a href="faq-jp.html">FAQ</a></li>
+        <li>ソフトウェア</li>
+        <li>チュートリアル</a></li>
+        <li>参加登録</a></li>
+        <li>予選</a></li>
+        <li>決勝</a></li>
+        <li>FAQ</a></li>
         <li><a href="sponsor-jp.html">スポンサー</a></li>
         <li><a href="index.html">English</a></li>
       </ul>
@@ -53,10 +54,10 @@
 <hr/>
 
     <section id="main">
-      <h2>情報処理学会 国際AIプログラミングコンテスト: SamurAI Coding 2015-16</h2>
-      <p>インターネット産業の急速な発展によるエンジニアの質と量の確保がますます重要となっています。情報処理学会は若い世代から将来第一線の研究者や開発者になりうる、また世界市場を舞台に活躍できる人材を育てることを目的として、国際的なAIプログラミングコンテスト "SamurAI Coding" を 2012 年度、2013 年度および 2014 年度に開催いたしました（<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/2012photos.html">2012年度決勝の様子</a>、
-	<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2013年度決勝の結果</a>、<a href="http://www.ipsj.or.jp/event/samuraicoding/2014-15/">2014年度の結果</a>）。</p>
-      <p>今年度も SamurAI Coding 2015-16 を開催いたします。ゲームをテーマにしたプログラミングスキルを競い、予選を勝ち抜いたチームが2016年3月に横浜市で開催される決勝へ進みます。決勝は<a href="http://www.ipsj.or.jp/event/taikai/78/">情報処理学会 第78回全国大会</a>
+      <h2>情報処理学会 国際 人工知能プログラミングコンテスト: SamurAI Coding 2016-17</h2>
+      <p>インターネット・IoT産業および人工知能技術の急速な発展によるエンジニアの質と量の確保がますます重要となっています。情報処理学会は若い世代から将来第一線の研究者や開発者になりうる、また世界市場を舞台に活躍できる人材を育てることを目的として、国際的なAIプログラミングコンテスト "SamurAI Coding" を 2012 年度、2013 年度、2014 年度および 2015 年度に開催いたしました（<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/2012photos.html">2012年度決勝の様子</a>、
+	<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2013年度決勝の結果</a>、<a href="http://www.ipsj.or.jp/event/samuraicoding/2014-15/">2014年度の結果</a>、<a href="http://www.ipsj.or.jp/event/samuraicoding/2015-16/">2015年度の結果</a>）。</p>
+      <p>今年度も SamurAI Coding 2016-17 を開催いたします。ゲームをテーマにした人工知能およびプログラミングのスキルを競い、予選を勝ち抜いたチームが2017年3月に名古屋市で開催される決勝へ進みます。決勝は<a href="http://www.ipsj.or.jp/event/taikai/79/">情報処理学会 第79回全国大会</a>
 	に併設されます。参加エンジニア・プログラマはその能力が世界で通用するか本コンテストを通じて試すことができます。</p>
     </section>
     
@@ -70,6 +71,7 @@
 </table>
     <section id="sponsors">
     <h2>スポンサー＆サポーター</h2>
+<!--
 <p>
 <table cellpadding="10" align="center">
 <tr align="center">
@@ -100,41 +102,14 @@
 </tr>
 </table>
 </p>
-
+-->
     </section>
     <section id="news">
       <h2>ニュース</h2>
       <ul>
-        <li>6月4日: 決勝戦に進出した各チームからいただいたAIプログラムを<a href="final-jp.html">決勝ページ</a>上で公開しました。
-        <li>3月16日: より多くの写真を<a href="final-jp.html">決勝ページ</a>に掲載しました。
-        <li>3月12日: 決勝（The world final round）は無事終了しました! 結果は<a href="final-jp.html">決勝ページ</a>を参照ください。また次の機会にお会いしましょう！
-	<li>2月15日: 決勝ラウンドのルールを<a href="final-jp.html">決勝のページ</a>に掲載しました。</li>
-<li>2月29日: <a href="preliminary-jp.html">オンライン予選2次募集における決勝への選抜結果</a>を掲載しました。決勝進出チームの皆さん、おめでとうございます！ 惜しかった皆さん、ぜひ決勝を一緒に観戦しましょう。また懇親会への先着順招待を実施することを検討しています。
-<li>2月13日: <a href="preliminary-jp.html">オンライン予選1次募集の結果の詳細</a>を掲載しました。
-<li>2月12日: <a href="preliminary-jp.html">オンライン予選1次募集における決勝への選抜結果</a>を掲載しました。決勝進出チームの皆さん、おめでとうございます！ 惜しかった皆さん、決勝進出のチャンスはもう一回ありますので、 ぜひ第2次予選にチャレンジしてください。
-<li>2月9日: オンライン予選1次募集を日本時間 2月9日 21:59をもって締め切りました。結果発表は2月12日を予定しています。
-<li>2月9日: タイムアウトの現象に関して<a href="faq-jp.html">FAQのページ</a>を更新しました。
-<li>1月27日: コンテストシステムへのAI投稿の受付を再開しました！何か問題にお気づきの方がいらっしゃいましたら、samurai2015-contact@ipsj.or.jp までご連絡ください。</li>
-<li>1月15日: システムのメンテナスの実施に伴い、オンライン予選 1次募集締切を 2016年2月8日 AoE（日本時間 2月9日 20:59）に延長しました。なお、日本時間 1月15日現在ではシステムのメンテナンスを実施途中です。</li>
-<li>1月13日: コンテストサーバの不具合の報告を数多くいただいております．参加者が正常に開発が行えない状況が続いていることを鑑み、システムのメンテナスの実施等のため、一次募集の締切を少なくとも3週間以上延長する予定です．二次募集を含む詳細な日程は決定次第お知らせします．</li>
-	<li>1月6日: <a href="software-jp.html">ゲーム実行管理システム</a>
-	  のソフトウエアを更新しました.</li>
-	<li>1月6日: Python で書いたサンプルプログラムを更新しました。</li>
-	<li>1月5日: 寄せられた質問と回答を<a href="faq-jp.html">FAQのページ</a>に掲載しました。ぜひ参照ください。</li>
-	<li>1月3日: オンライン予選 1次募集締切を1月12日 AoE（日本時間 13日 20:59 <s>19:59</s>）に延長しました！</li>
-	<li>12月25日:
-	  <a href="preliminary-jp.html">
-	    予選のルールとハードウェア環境を掲載しました。
-	</a></li>
-	<li>12月20日: <a href="flyer1-150311.pdf">参加募集PDF</a> を掲載しました。</li>
-	<li>12月18日: Java で書いたサンプルプログラムを更新しました。</li>
-	<li>12月16日: Java と Python 2 で書いたサンプルプログラムが <a href="software.html">Software</a> のページにリリースされました。</li>
-      	<li>11月26日: <a href="rules.html">ルール</a>と<a href="software.html">ソフトウェア</a>のページを更新しました。
-      	<li>11月24日: <a href="http://arena.ai-comp.net/">対戦サーバ</a>を公開しました。今のところアカウント登録のみが可能です。
-      	<li>10月7日: <a href="schedule-jp.html">日程</a>が決まりました。予選通過のチャンスは2回、1次募集の締切は2016年1月8日の予定です。
-      	<li>9月8日: <a href="sponsor-jp.html">スポンサー募集</a>を開始しました。
-      	<li>9月8日: <a href="aboutgame-jp.html">ゲームルール案</a>を公開しました。
-        <li>9月8日: 本予告サイトを立ち上げました。
+      	<li>9月3日: <a href="sponsor-jp.html">スポンサー募集</a>を開始しました。
+      	<li>9月3日: <a href="rules-jp.html">ゲームルール</a>を公開しました。
+        <li>9月2日: 本予告サイトを立ち上げました。
       </ul>
     </section>
 
@@ -143,38 +118,40 @@
 <p>
 年齢制限はありません。どなたでもご参加いただけます。
 個人、またはチーム（メンバー数上限なし）のいずれの形でもご参加いただけます。
+<!--
 <a href="http://arena.ai-comp.net/">参加登録サイト</a>からぜひ登録ならびにプログラムを提出ください。
+-->
 </p>
     </section>
 
     <section id="prize">
-      <h2>特典</h2>
+      <h2>特典（予定）</h2>
 
       <b>予選応募者（決勝出場者を含む）</b>
 
 <p>
-予選応募者は、成績によらず決勝当日夜の懇親会に出席できます（ただし先着順、人数制限あり）。
-予選応募者や決勝出場者、スポンサー企業の皆様等との交流の場として懇親会を設けます。
+予選応募者は、成績によらず決勝当日夜の懇親会に出席できます（ただし先着順、人数制限あり）（予定）。
+予選応募者や決勝出場者、スポンサー企業の皆様等との交流の場として懇親会を設けます（予定）。
 </p>
 
 <p>
-学生の方は、<a href="http://www.ipsj.or.jp/event/taikai/78/">全国大会申込サイト</a>で別途申し込むことで第78回全国大会を無料聴講できます。
+学生の方は、<a href="http://www.ipsj.or.jp/event/taikai/79/">全国大会申込サイト</a>で別途申し込むことで第78回全国大会を無料聴講できます（予定）。
 </p>
 
 <b>決勝出場者</b>
 
 <p>
-決勝における上位表彰者には総額10万円相当の副賞が提供されます（予定）。さらに、スポンサーから企業賞や景品が提供される予定です。
+決勝における上位表彰者には副賞が提供されます（予定）。さらに、スポンサーから企業賞や景品が提供される予定です。
 </p>
 <p>
 決勝出場者については、情報処理学会非会員の場合に情報処理学会の入会金（正会員のみ）および一年間の会費が無料となり、
-一年間の会員権を得ます。
-会員権には、情報処理学会デジタルライブラリへのアクセス権利も含まれます。
+一年間の会員権を得ます（予定）。
+会員権には、情報処理学会デジタルライブラリへのアクセス権利も含まれます（予定）。
 </p>
 
 <p>
-決勝出場者は、決勝への旅費補助を受けられます。昨年は、海外チームは10万円を上限として、
-国内チームは遠方からの参加の場合に実費相当を支援しました。今年は変更の可能性があります。
+決勝出場者は、決勝への旅費補助を受けられます（予定）。昨年度は、海外チームは10万円を上限として、
+国内チームは遠方からの参加の場合に実費相当を支援しました。今年度は変更の可能性があります。
 </p>
 
 <p>
@@ -184,15 +161,11 @@
     </section>
 
     <section id="importantdates">
-      <h2>主要日程</h2>
+      <h2>主要日程（予定）</h2>
       <ul>
-        <li>ルール公開、応募受付開始：2015年10-11月</li>
-        <li>オンライン予選 1次募集締切：2016年2月8日 AoE（日本時間 2月9日 20:59）システムのメンテナンスの実施に伴い延長しました</li>
-        <li>オンライン予選 1次募集結果発表：2016年2月12日 9チーム程度選抜（うち3チーム程度は多様性および地域バランス等を考慮した特別選抜枠の予定）</li>
-        <li>オンライン予選 2次募集締切：2016年2月22日 AoE（日本時間 2月23日 20:59）システムのメンテナスの実施に伴い延長しました
-</li>
-        <li>オンライン予選 2次募集結果発表：2016年2月26日（予定）9チーム程度選抜（うち3チーム程度は多様性および地域バランス等を考慮した特別選抜枠の予定）</li>
-        <li>決勝（於 慶應義塾大学） 　　：2016年3月11日　※<a href="http://www.ipsj.or.jp/event/taikai/78">情報処理学会第78回全国大会併催</a></li>
+        <li>ルール公開：2016年9-10月</li>
+        <li>オンライン予選：2016年11月-2017年2月</li>
+        <li>決勝（於 名古屋大学） 　　：2017年3月17日　※<a href="http://www.ipsj.or.jp/event/taikai/79">情報処理学会第79回全国大会併催</a></li>
       </ul>
     </section>
 
@@ -202,8 +175,8 @@
         本コンテストではAIプログラム同士をゲーム上で戦わせる対戦型AIプログラミングを実施します。
         参加者はプログラミングスキルに加えて、
         アルゴリズムやAIストラテジーの設計スキルで競い合います。
-        <a href="aboutgame-jp.html">ゲーム内容「SamurAI 3×3（サムライ・スリー・オン・スリー）」</a>は、
-        異なる武器を使う3人のサムライが軍団を組み、同じく3人のサムライからなる相手軍団と対戦して、獲得した領地の広さを競うゲームです。競技参加者はそれぞれひとりのサムライの動作を決めるAIプログラムを作成、味方のサムライと協力してゲームを進めます。
+        <a href="rules-jp.html">ゲーム内容「SamurAI 3×3（サムライ・スリー・オン・スリー）2016」</a>は、
+        異なる武器を使う3人のサムライが軍団を組み、同じく3人のサムライからなる相手軍団と対戦して、獲得した領地の広さを競うゲームです。競技参加者は同一軍団の3人のサムライの動作を決めるAIプログラムを作成します。
       </p>
       <p>
         プログラミング言語としては、C++、Javaを含む様々な主要な言語に対応する予定です。
@@ -222,11 +195,12 @@
 高田眞吾（慶應義塾大学）,  吉野松樹（日立製作所）, 
 坂本一憲（国立情報学研究所）,
 田中哲朗（東京大学）, 
-新田淳（日立製作所）, 
+三輪 誠（豊田工業大学），
 大場みち子（はこだて未来大学）, 
-深澤紀子（鉄道総合技術研究所）
+深澤紀子（鉄道総合技術研究所）, 
+鈴木 浩（富士通研究所）
 </p>
-<h2>ゲーム開発チーム</h2>
+<h2>ゲーム開発チーム（2015年度）</h2>
 <p>
 亀甲 博貴（東京大学）、
 川上 裕生（東京大学）、
@@ -247,14 +221,15 @@
           <section id="contact">
             <h3>情報処理学会</h3>
             <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 4階</p>
-            <p>email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
-          samurai2015-contact@ipsj.or.jp</a></p>
+            <p>email: <a class="contactadddr" href="mailto:samurai-contact@ipsj.or.jp">
+          samurai-contact@ipsj.or.jp</a></p>
           <a href="http://www.ipsj.or.jp/"><img src="images/IPSJ_logoB_M.gif" width="200"/></a>
           </section>
         </td>
         <td width="300">
           <section id="sponsors">
             <h3>ゴールドスポンサー</h3>
+<!--
             <p>株式会社いい生活<br>
             <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
 <p>株式会社日立製作所<br>
@@ -266,9 +241,10 @@
 <p>TIS株式会社<br>
 <a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a>
 </p>
-
+-->
 
             <h3>サポーター</h3>
+<!--
 <p>ヴォーカル・スクール ヴィーナス<br>
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 </p>
@@ -280,17 +256,21 @@
 <p>クレイ・ジャパン・インク<br>
 <a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
 </p>
+-->
 
 <h3>メディアスポンサー</h3>
+<!--
             <p>株式会社ジースタイラス<br>
             <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
 
 <p><a href="https://moneyforward.com/">株式会社マネーフォワード</a></p>
+-->
           </section>
         </td>
         <td>
           <section id="supporters">
             <h3>協賛</h3>
+<!--
             <p class="smaller">
 
 China Computer Federation<br>
@@ -327,16 +307,18 @@ IEEE Japan Office<br>
 
 The Korean Institute of Information Scientists and Engineers<br>
 <a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a>
-
+-->
             </p>
           </section>
           <section id="backers">
             <h3>後援</h3>
+<!--
             <p class="smaller">
 独立行政法人情報処理推進機構<br><br>
 経済産業省<br><br>
 文部科学省
             </p>
+-->
           </section>
         </td>
       </tr>
